# tnt-core

./: .audit-rules  .claude-pool  .gitignore  .gitmodules  .soldeerignore  ADMIN_OPERATIONS.md  AGENTS.md  AUDIT-PAYMENTS.md  AUDIT-SECURITY-75.md  AUDIT-SLASHING.md  CLAUDE.md  COMMIT_MSG.md  Cargo.toml  DEPLOYMENT_RUNBOOK.md  MIGRATION_REPORT.md  PAYMENT_FLOW.md  PROVER_API_PRODUCTION_PLAN.md  README.md  coverage.sh  foundry.toml  package.json  pursue-launch-readiness.md  remappings.txt
architecture/: 00-v1-substrate-architecture.md  01-design-principles.md  02-shared-security-interface.md  03-protocol-contracts.md  04-sdk-updates.md  05-implementation-plan.md  06-beacon-chain-validator-restaking.md  06-beacon-chain-validator-staking.md  DESIGN.md  PROGRESS.md  README.md  SDK_INTEGRATION_ROADMAP.md  SLASHING_ARCHITECTURE.md
audit/: qos-metrics-solidity-audit.md  tob-entry-points.md  (+1 more)
bindings/: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  TNT_CORE_VERSION
bindings/abi/: IBlueprintServiceManager.json  IMultiAssetDelegation.json  IOperatorStatusRegistry.json  ITangle.json  ITangleFull.json  ITangleSlashing.json  MultiAssetDelegation.json  OperatorStatusRegistry.json
bindings/src/: lib.rs
bindings/src/bindings/: i_blueprint_service_manager.rs  i_master_blueprint_service_manager.rs  i_multi_asset_delegation.rs  i_operator_status_registry.rs  i_tangle.rs  i_tangle_admin.rs  i_tangle_blueprints.rs  i_tangle_full.rs  i_tangle_governance.rs  i_tangle_jobs.rs  i_tangle_operators.rs  i_tangle_payments_internal.rs  i_tangle_rewards.rs  i_tangle_security_view.rs  i_tangle_services.rs  i_tangle_slashing.rs  i_tangle_token.rs  mod.rs  multi_asset_delegation.rs  multi_asset_delegation_exposed.rs  multi_asset_delegation_test.rs  operator_status_registry.rs  operator_status_registry_test.rs  upgrade_multi_asset_delegation.rs
bytecode/: build.rs  (+1 more)
fixtures/: Cargo.toml  LICENSE-APACHE  README.md
fixtures/fixtures/: localtestnet-broadcast.json
fixtures/src/: lib.rs
(+841 files in other folders)
