[package]
name = "tnt-core-bindings"
version = "0.4.2"
edition = "2021"
rust-version = "1.81"
description = "Rust bindings for TNT Core Solidity contracts (Tangle restaking protocol)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tangle-network/tnt-core"
homepage = "https://tangle.tools"
documentation = "https://docs.rs/tnt-core-bindings"
readme = "README.md"
keywords = ["tangle", "restaking", "ethereum", "solidity", "alloy"]
categories = ["cryptography::cryptocurrencies", "api-bindings"]
include = [
    "src/**/*",
    "abi/**/*",
    "TNT_CORE_VERSION",
    "Cargo.toml",
    "README.md",
    "LICENSE-*",
]

[lib]
path = "src/lib.rs"

[dependencies]
alloy = { version = "1.0.35" }
alloy-contract = "1.0.35"
alloy-sol-types = "1.2.1"
serde = { version = "1.0", features = ["derive"], default-features = false }
